// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render MovieList component render grid layout correctly 1`] = `
<section
  className="movieListGrid"
>
  <MovieCard
    genres={
      Array [
        Object {
          "id": 1,
          "name": "Action",
        },
        Object {
          "id": 2,
          "name": "SciFi",
        },
      ]
    }
    handleModalToggle={[MockFunction]}
    isGrid={true}
    isModalOpened={false}
    movie={
      Object {
        "adult": false,
        "backdropPath": "/test.jpg",
        "genreIds": Array [
          1,
          2,
        ],
        "id": 1,
        "originalLanguage": "en",
        "originalTitle": "test",
        "overview": "test",
        "popularity": 1,
        "posterPath": "/test.jpg",
        "releaseDate": "1",
        "title": "test",
        "video": false,
        "voteAverage": 1,
        "voteCount": 1,
      }
    }
  />
  <MovieCard
    genres={
      Array [
        Object {
          "id": 1,
          "name": "Action",
        },
        Object {
          "id": 2,
          "name": "SciFi",
        },
      ]
    }
    handleModalToggle={[MockFunction]}
    isGrid={true}
    isModalOpened={false}
    movie={
      Object {
        "adult": false,
        "backdropPath": "/test.jpg",
        "genreIds": Array [
          1,
          2,
        ],
        "id": 1,
        "originalLanguage": "en",
        "originalTitle": "test",
        "overview": "test",
        "popularity": 1,
        "posterPath": "/test.jpg",
        "releaseDate": "1",
        "title": "test",
        "video": false,
        "voteAverage": 1,
        "voteCount": 1,
      }
    }
  />
</section>
`;

exports[`render MovieList component render table layout correctly 1`] = `
<section
  className="movieListTable"
>
  <MovieCard
    genres={
      Array [
        Object {
          "id": 1,
          "name": "Action",
        },
        Object {
          "id": 2,
          "name": "SciFi",
        },
      ]
    }
    handleModalToggle={[MockFunction]}
    isGrid={false}
    isModalOpened={false}
    movie={
      Object {
        "adult": false,
        "backdropPath": "/test.jpg",
        "genreIds": Array [
          1,
          2,
        ],
        "id": 1,
        "originalLanguage": "en",
        "originalTitle": "test",
        "overview": "test",
        "popularity": 1,
        "posterPath": "/test.jpg",
        "releaseDate": "1",
        "title": "test",
        "video": false,
        "voteAverage": 1,
        "voteCount": 1,
      }
    }
  />
  <MovieCard
    genres={
      Array [
        Object {
          "id": 1,
          "name": "Action",
        },
        Object {
          "id": 2,
          "name": "SciFi",
        },
      ]
    }
    handleModalToggle={[MockFunction]}
    isGrid={false}
    isModalOpened={false}
    movie={
      Object {
        "adult": false,
        "backdropPath": "/test.jpg",
        "genreIds": Array [
          1,
          2,
        ],
        "id": 1,
        "originalLanguage": "en",
        "originalTitle": "test",
        "overview": "test",
        "popularity": 1,
        "posterPath": "/test.jpg",
        "releaseDate": "1",
        "title": "test",
        "video": false,
        "voteAverage": 1,
        "voteCount": 1,
      }
    }
  />
</section>
`;
